--- a/src/visualization/src/Controller.css
+++ b/src/visualization/src/Controller.css
@@ -1,10 +1,7 @@
 .Controller{
     margin: 0 0 0 0;
     position: absolute;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    padding: 1rem 0.5rem;
     right: 0;
     display: flex;
     width: fit-content;
